# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University of Chicago
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2017 University of California, Davis
#
# See COPYING for license information.
#
# ----------------------------------------------------------------------
#

subpackage = friction
include $(top_srcdir)/subpackage.am

subpkginclude_HEADERS = \
	FrictionModel.hh \
	FrictionModel.icc \
	StaticFriction.hh \
	SlipWeakening.hh \
	SlipWeakeningTime.hh \
	SlipWeakeningTimeStable.hh \
	RateStateAgeing.hh \
	RateStateAgeingFH.hh \
	RateStateAgeingFHSlipWeakening.hh \
	RateStateAgeingFHSlipWeakeningVw.hh \
	RateStateAgeingVaryingBFH.hh \
	RateStateAgeingVaryingBSWFH.hh \
	RateStateSlippingFH.hh \
	RateStateSlipFHSlipWeakeningVw.hh \
	RegularizedRateStateAgeingFH.hh \
	RegularizedRateStateSlippingFH.hh \
	TimeWeakening.hh \
	frictionfwd.hh


noinst_HEADERS =


# End of file 
